# GenAI_GUI

./: .gitignore  README.md  app.py  chat_history.db-shm  chat_history.db-wal  chatbot.py  config.py  graph.py  history.py  pyproject.toml  requirements.txt
